js file versioning to force re-downloading

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -11,7 +11,7 @@
 
 <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-<script type="text/javascript" src="/js/menu-counters.js"></script>
+<script type="text/javascript" src="/js/menu-counters-1.0.js"></script>
 <script type="text/javascript" charset="utf-8" src="/plugins/DataTables-1.8.2/media/js/jquery.dataTables.js"></script>
 
 <script src="/plugins/DataTables-1.8.2/extras/TableTools/media/js/ZeroClipboard.js" charset="utf-8" type="text/javascript"></script>
