--- a/templates/info/report-folder.tmpl
+++ b/templates/info/report-folder.tmpl
@@ -2,7 +2,7 @@
 <TMPL_INCLUDE NAME="submenu_info.tmpl">
 
 <script type="text/javascript" src="/js/moment.min.js"></script>
-<script type="text/javascript" src="/js/report-folder.js"></script>
+<script type="text/javascript" src="/js/report-folder-1.0.js"></script>
 
 <script type="text/javascript">
 set_secondary_tab("menu_info_report-folder");
