--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -2,7 +2,7 @@
 <TMPL_INCLUDE NAME="submenu_myaccount.tmpl">
 
 <script type="text/javascript" src="/js/jquery.jeditable.js"></script>
-<script type="text/javascript" src="/js/library-barcodes.js"></script>
+<script type="text/javascript" src="/js/library-barcodes-1.0.js"></script>
 
 
 <script type="text/javascript">
