--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="/fILL.1.0.css"></link>
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
-  <script type="text/javascript" src="/js/fILL_client.js"></script>
-  <script type="text/javascript" src="/js/menu-counters.js"></script>
+  <script type="text/javascript" src="/js/fILL_client-1.0.js"></script>
+  <script type="text/javascript" src="/js/menu-counters-1.0.js"></script>
 <script language="JavaScript">
 
   function set_primary_tab(tab_id) {
