--- a/templates/search/live-requests.tmpl
+++ b/templates/search/live-requests.tmpl
@@ -1,5 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<script type="text/javascript" src="/js/live-requests.js"></script>
+<script type="text/javascript" src="/js/live-requests-1.0.js"></script>
 
 <script type="text/javascript">
 
