--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -2,7 +2,7 @@
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
 <script type="text/javascript" src="/plugins/jquery.printElement.js"></script>
-<script type="text/javascript" src="/js/receiving.js"></script>
+<script type="text/javascript" src="/js/receiving-1.0.js"></script>
 
 
 <script type="text/javascript">
