--- a/templates/search/returns.tmpl
+++ b/templates/search/returns.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
-<script type="text/javascript" src="/js/returns.js"></script>
+<script type="text/javascript" src="/js/returns-1.0.js"></script>
 
 
 <script type="text/javascript">
