--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
-<script type="text/javascript" src="/js/shipping.js"></script>
+<script type="text/javascript" src="/js/shipping-1.0.js"></script>
 
 
 <script type="text/javascript">
