--- a/templates/search/renew-answer.tmpl
+++ b/templates/search/renew-answer.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
-<script type="text/javascript" src="/js/renewal-answer.js"></script>
+<script type="text/javascript" src="/js/renewal-answer-1.0.js"></script>
 
 
 <script type="text/javascript">
