--- a/templates/search/renewals.tmpl
+++ b/templates/search/renewals.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
-<script type="text/javascript" src="/js/renewals.js"></script>
+<script type="text/javascript" src="/js/renewals-1.0.js"></script>
 
 
 <script type="text/javascript">
