--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -70,6 +70,23 @@ $('document').ready(function(){
       <li>For each remaining request - those that will be unfilled - click the "Unfilled" button and select a reason.</li>
       <li>Hover over a library's symbol to see the full name of the library.</li>
     </ol>
+    <hr/>
+    <br />
+    <h3>Unfilled codes</h3>
+    <table style="border:1px solid black;border-collapse:collapse;">
+      <tr><td style="border:1px solid black;">in-use /on-loan</td><td style="border:1px solid black;">Currently checked out to a patron.</td></tr>
+      <tr><td style="border:1px solid black;">in-process</td><td style="border:1px solid black;">Not ready for loan.</td></tr>
+      <tr><td style="border:1px solid black;">lost</td><td style="border:1px solid black;">Item has been declared missing.</td></tr>
+      <tr><td style="border:1px solid black;">not-owned</td><td style="border:1px solid black;">Our catalogue lies.  We should fix that.</td></tr>
+      <tr><td style="border:1px solid black;">on-order</td><td style="border:1px solid black;">We're going to buy it.</td></tr>
+      <tr><td style="border:1px solid black;">not-on-shelf</td><td style="border:1px solid black;">We've... misplaced it.</td></tr>
+      <tr><td style="border:1px solid black;">on-reserve</td><td style="border:1px solid black;">Too new, or circ limited to specific group.</td></tr>
+      <tr><td style="border:1px solid black;">poor- condition</td><td style="border:1px solid black;">How did that get back on the shelf?</td></tr>
+      <tr><td style="border:1px solid black;">charges</td><td style="border:1px solid black;">There would be a fee - email us to ask.</td></tr>
+      <tr><td style="border:1px solid black;">on-hold</td><td style="border:1px solid black;">There are local holds on this.</td></tr>
+      <tr><td style="border:1px solid black;">policy-problem</td><td style="border:1px solid black;">It is against our policies to loan this.</td></tr>
+      <tr><td style="border:1px solid black;">other</td><td style="border:1px solid black;">Any other reason.</td></tr>
+    </table>
   </div>
 
   <div id="middlecontent">
