notice about book clubs

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <td style="width:15%"></td>
-    <td style="width:70%">
+    <td style="width:55%">
       <h1>Welcome!</h1>
       <br />
       <p>This is the Manitoba public libraries' Z39.50 spray search and interlibrary-loan requesting system.</p>
@@ -26,7 +26,19 @@
       <p class="debuginfo">Session id [<TMPL_VAR NAME="sessionid">]</p>
 
     </td>
-    <td style="width:15%"></td>
+    <td style="width:30%">
+      <h2>Notice about requesting for book clubs</h2>
+      <br/>
+      <p>To request multiple copies of a book, you will need to make multiple requests.</p>
+      <br/>
+      <p>Once you've searched for the title,</p><br/>
+      <ol>
+	<li>Along the left-hand side, at the bottom, you can filter by "Source".  Select a library - this will show only the results for that library - and then make the request.</li>
+	<li>Go back to the search results, remove the "Source" filter (at the top of the results, under the "<< Prev | 1 | Next >>" results page navigation) by clicking on it, and then go back to step 1 (select the next source).</li>
+      </ol>
+      <br/>
+      <p>Do that for as many copies of the book as you'd like to request.</p>
+    </td>
   </tr>
 </table>
 
