moved current lending/unfilled to a separate tab, and renamed live-request stuff to current

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -82,8 +82,8 @@
       </a>
     </li>
 
-    <li id="menu_borrow_live_requests">
-      <a href=/cgi-bin/lightning.cgi?rm=live_requests>
+    <li id="menu_borrow_current_requests">
+      <a href=/cgi-bin/lightning.cgi?rm=current>
       Current ILLs
       </a>
     </li>
