--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -1,5 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<script type="text/javascript" src="/js/live-requests-1.0.js"></script>
+<script type="text/javascript" src="/js/current-1.0.js"></script>
 
 <script type="text/javascript">
 
@@ -28,6 +28,7 @@ $('document').ready(function(){
 
     var anOpenBorrowing = [];
     var anOpenLending = [];
+    var anOpenNotfilled = [];
     var sImageUrl = "/plugins/DataTables-1.8.2/examples/examples_support/";
 
     oTable_borrowing = $('#datatable_borrowing').dataTable({
@@ -107,7 +108,41 @@ $('document').ready(function(){
         ]
     });
 
-    $.getJSON('/cgi-bin/get-live-requests.cgi', {lid: <TMPL_VAR name="lid">},
+    oTable_notfilled = $('#datatable_notfilled').dataTable({
+       "bJQueryUI": true,
+        "sPaginationType": "full_numbers",
+        "bInfo": true,
+      	"bSort": true,
+	"sDom": '<"H"Tfr>t<"F"ip>',
+	"oTableTools": {
+                "sSwfPath": "/plugins/DataTables-1.8.2/extras/TableTools/media/swf/copy_cvs_xls_pdf.swf",
+		"aButtons": [
+			"copy", "csv", "xls", "pdf",
+			{
+				"sExtends":    "collection",
+				"sButtonText": "Save",
+				"aButtons":    [ "csv", "xls", "pdf" ]
+			}
+		]
+	},
+        "aoColumns": [
+            {
+               "mDataProp": null,
+               "sClass": "control center",
+               "sDefaultContent": '<img src="'+sImageUrl+'details_open.png'+'">'
+            },
+            { "mDataProp": "id" },
+            { "mDataProp": "title" },
+            { "mDataProp": "author" },
+            { "mDataProp": "requested_by" },
+//            { "mDataProp": "requester" },
+            { "mDataProp": "ts" },
+            { "mDataProp": "status" },
+            { "mDataProp": "message" },
+        ]
+    });
+
+    $.getJSON('/cgi-bin/get-current-requests.cgi', {lid: <TMPL_VAR name="lid">},
             function(data){
                 build_table(data);
            })
@@ -191,6 +226,43 @@ $('document').ready(function(){
           $('div.innerDetails', $(nTr).next()[0]).slideUp( function () {
             oTable_lending.fnClose( nTr );
             anOpenLending.splice( i, 1 );
+          } );
+        }
+      }
+    } );
+
+    $('#datatable_notfilled td.control').live( 'click', function () {
+      var nTr = this.parentNode;
+      var i = $.inArray( nTr, anOpenNotfilled );
+   
+      if ( i === -1 ) {
+        $('img', this).attr( 'src', sImageUrl+"details_close.png" );
+	fnFormatDetails(oTable_notfilled, nTr);
+        anOpenNotfilled.push( nTr );
+      }
+      else {
+
+	// If we're here, there is either a 'conversation' tr or an 'overrides' tr open
+        var rOpen = $(nTr).next('[detail*="conversation"]');
+	if (rOpen.length == 0) {
+          // must be overrides that is open.  close it and open the conversation
+	  $(nTr).children('.overrides').children('img').attr( 'src', sImageUrl+"details_open.png" );
+          $('div.innerDetails', $(nTr).next()[0]).slideUp( function () {
+            oTable_notfilled.fnClose( nTr );
+            anOpenNotfilled.splice( i, 1 );
+
+            //$('img', this).attr( 'src', sImageUrl+"details_close.png" );
+   	    $(nTr).children('.control').children('img').attr( 'src', sImageUrl+"details_close.png" );
+            fnFormatDetails(oTable_notfilled, nTr);
+            anOpenNotfilled.push( nTr );
+          } );
+          
+	} else {
+          // conversation is open, user is closing it.
+          $('img', this).attr( 'src', sImageUrl+"details_open.png" );
+          $('div.innerDetails', $(nTr).next()[0]).slideUp( function () {
+            oTable_notfilled.fnClose( nTr );
+            anOpenNotfilled.splice( i, 1 );
           } );
         }
       }
@@ -291,6 +363,7 @@ $('document').ready(function(){
       <ul>
 	<li><a href="#tabs-1">Current borrowing</a></li>
 	<li><a href="#tabs-2">Current lending</a></li>
+	<li><a href="#tabs-3">We could not lend</a></li>
       </ul>
 
       <div id="tabs-1">
@@ -316,6 +389,21 @@ $('document').ready(function(){
 	    <thead>
 	      <tr>
 		<th></th><th>id</th><th>title</th><th>author</th><th>requested_by</th><th>ts</th><th>status</th><th>message</th><th>overrides</th>
+	      </tr>
+	    </thead>
+	    <tbody>
+	    </tbody>
+	  </table>
+	</div>
+      </div>
+
+      <div id="tabs-3">
+	<h4>We could not lend</h4>
+	<div class="dataTable_wrapper">
+	  <table id="datatable_notfilled" class="display">
+	    <thead>
+	      <tr>
+		<th></th><th>id</th><th>title</th><th>author</th><th>requested_by</th><th>ts</th><th>status</th><th>message</th>
 	      </tr>
 	    </thead>
 	    <tbody>
