missed one template for the live_requests to current rename

--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -107,8 +107,8 @@ $('document').ready(function(){
       </a>
     </li>
 
-    <li id="menu_borrow_live_requests">
-      <a href=/cgi-bin/lightning.cgi?rm=live_requests>
+    <li id="menu_borrow_current">
+      <a href=/cgi-bin/lightning.cgi?rm=current>
       Current ILLs
       </a>
     </li>
