Add user message to unfilled response

--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
-<script type="text/javascript" src="/js/unfilled-1.0.js"></script>
+<script type="text/javascript" src="/js/unfilled-1.1.js"></script>
 
 
 <script type="text/javascript">
@@ -44,8 +44,8 @@ $('document').ready(function(){
                            { "mDataProp": "Patron" },
                            { "mDataProp": "Timestamp" },
                            { "mDataProp": "From" },
-                           { "mDataProp": "From (ID)" },
                            { "mDataProp": "Status" },
+                           { "mDataProp": "Message" },
                            { "mDataProp": "Last source tried" },
                            { "mDataProp": "Total # sources" },
                            { "mDataProp": "Next lender?" }
