--- a/templates/search/unfilled.tmpl
+++ b/templates/search/unfilled.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
-<script type="text/javascript" src="/js/unfilled-1.1.js"></script>
+<script type="text/javascript" src="/js/unfilled-1.3.js"></script>
 
 
 <script type="text/javascript">
@@ -41,12 +41,12 @@ $('document').ready(function(){
                            { "mDataProp": "ID" },
                            { "mDataProp": "Title" },
                            { "mDataProp": "Author" },
-                           { "mDataProp": "Patron" },
+                           { "mDataProp": "Patron / Group" },
                            { "mDataProp": "Timestamp" },
                            { "mDataProp": "From" },
                            { "mDataProp": "Status" },
                            { "mDataProp": "Message" },
-                           { "mDataProp": "Last source tried" },
+                           { "mDataProp": "# sources tried" },
                            { "mDataProp": "Total # sources" },
                            { "mDataProp": "Next lender?" }
                       ]
