add lender name to current borrowing datatable

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -59,6 +59,7 @@ $('document').ready(function(){
             { "mDataProp": "title" },
             { "mDataProp": "author" },
             { "mDataProp": "patron_barcode" },
+            { "mDataProp": "lender" },
             { "mDataProp": "ts" },
             { "mDataProp": "status" },
             { "mDataProp": "message" },
@@ -374,7 +375,7 @@ $('document').ready(function(){
 	  <table id="datatable_borrowing" class="display">
 	    <thead>
 	      <tr>
-		<th></th><th>id</th><th>title</th><th>author</th><th>patron_barcode</th><th>ts</th><th>status</th><th>message</th><th>overrides</th>
+		<th></th><th>id</th><th>title</th><th>author</th><th>patron_barcode</th><th>lender</th><th>ts</th><th>status</th><th>message</th><th>overrides</th>
 	      </tr>
 	    </thead>
 	    <tbody>
