request chains - a request is now only the conversation with a particular library

--- a/templates/search/current.tmpl
+++ b/templates/search/current.tmpl
@@ -1,5 +1,5 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<script type="text/javascript" src="/js/current-1.4.js"></script>
+<script type="text/javascript" src="/js/current-1.5.js"></script>
 
 <script type="text/javascript">
 
@@ -55,7 +55,8 @@ $('document').ready(function(){
                "sClass": "control center",
                "sDefaultContent": '<img src="'+sImageUrl+'details_open.png'+'">'
             },
-            { "mDataProp": "id" },
+            { "mDataProp": "gid" },
+            { "mDataProp": "cid" },
             { "mDataProp": "title" },
             { "mDataProp": "author" },
             { "mDataProp": "patron_barcode" },
@@ -94,7 +95,7 @@ $('document').ready(function(){
                "sClass": "control center",
                "sDefaultContent": '<img src="'+sImageUrl+'details_open.png'+'">'
             },
-            { "mDataProp": "id" },
+            { "mDataProp": "cid" },
             { "mDataProp": "title" },
             { "mDataProp": "author" },
             { "mDataProp": "requested_by" },
@@ -133,7 +134,7 @@ $('document').ready(function(){
                "sClass": "control center",
                "sDefaultContent": '<img src="'+sImageUrl+'details_open.png'+'">'
             },
-            { "mDataProp": "id" },
+            { "mDataProp": "cid" },
             { "mDataProp": "title" },
             { "mDataProp": "author" },
             { "mDataProp": "requested_by" },
@@ -375,7 +376,7 @@ $('document').ready(function(){
 	  <table id="datatable_borrowing" class="display">
 	    <thead>
 	      <tr>
-		<th></th><th>id</th><th>title</th><th>author</th><th>patron_barcode</th><th>lender</th><th>ts</th><th>status</th><th>message</th><th>overrides</th>
+		<th></th><th>gid</th><th>cid</th><th>title</th><th>author</th><th>patron_barcode</th><th>lender</th><th>ts</th><th>status</th><th>message</th><th>overrides</th>
 	      </tr>
 	    </thead>
 	    <tbody>
@@ -390,7 +391,7 @@ $('document').ready(function(){
 	  <table id="datatable_lending" class="display">
 	    <thead>
 	      <tr>
-		<th></th><th>id</th><th>title</th><th>author</th><th>requested_by</th><th>ts</th><th>status</th><th>message</th><th>overrides</th>
+		<th></th><th>cid</th><th>title</th><th>author</th><th>requested_by</th><th>ts</th><th>status</th><th>message</th><th>overrides</th>
 	      </tr>
 	    </thead>
 	    <tbody>
@@ -405,7 +406,7 @@ $('document').ready(function(){
 	  <table id="datatable_notfilled" class="display">
 	    <thead>
 	      <tr>
-		<th></th><th>id</th><th>title</th><th>author</th><th>requested_by</th><th>ts</th><th>status</th><th>message</th>
+		<th></th><th>cid</th><th>title</th><th>author</th><th>requested_by</th><th>ts</th><th>status</th><th>message</th>
 	      </tr>
 	    </thead>
 	    <tbody>
