gid, cid added to all borrowing tables

--- a/templates/search/receiving.tmpl
+++ b/templates/search/receiving.tmpl
@@ -2,7 +2,7 @@
 <TMPL_INCLUDE NAME="submenu_borrow.tmpl">
 
 <script type="text/javascript" src="/plugins/jquery.printElement.js"></script>
-<script type="text/javascript" src="/js/receiving-1.0.js"></script>
+<script type="text/javascript" src="/js/receiving-1.1.js"></script>
 
 
 <script type="text/javascript">
@@ -40,6 +40,8 @@ $('document').ready(function(){
 		           ]
         	       },
                        "aoColumns": [
+                           { "mDataProp": "gid" },
+                           { "mDataProp": "cid" },
                            { "mDataProp": "ID" },
                            { "mDataProp": "Title" },
                            { "mDataProp": "Author" },
