gid, cid for lending-side data tables, and bugfixes for borrowing-side (table column indexes changed)

--- a/templates/search/checkins.tmpl
+++ b/templates/search/checkins.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
-<script type="text/javascript" src="/js/checkins-1.0.js"></script>
+<script type="text/javascript" src="/js/checkins-1.1.js"></script>
 
 <script type="text/javascript">
 set_secondary_tab("menu_lend_checkins");
@@ -37,6 +37,8 @@ $('document').ready(function(){
 		           ]
         	       },
                        "aoColumns": [
+                           { "mDataProp": "gid" },
+                           { "mDataProp": "cid" },
                            { "mDataProp": "ID" },
                            { "mDataProp": "Title" },
                            { "mDataProp": "Author" },
