--- a/templates/search/shipping.tmpl
+++ b/templates/search/shipping.tmpl
@@ -1,7 +1,7 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_lend.tmpl">
 
-<script type="text/javascript" src="/js/shipping-1.1.js"></script>
+<script type="text/javascript" src="/js/shipping-1.2.js"></script>
 
 
 <script type="text/javascript">
@@ -37,6 +37,8 @@ $('document').ready(function(){
 		           ]
         	       },
                        "aoColumns": [
+                           { "mDataProp": "gid" },
+                           { "mDataProp": "cid" },
                            { "mDataProp": "ID" },
                            { "mDataProp": "From" },
                            { "mDataProp": "From (ID)" },
