beginning of reports redesign - ILL stats report

--- a/templates/submenu_info.tmpl
+++ b/templates/submenu_info.tmpl
@@ -14,7 +14,7 @@
       Documents
       </a>
     </li>
-
+<!--
     <li id="menu_info_reports">
       <a href=/cgi-bin/info.cgi?rm=info_reports_form>
       Run reports
@@ -24,6 +24,12 @@
     <li id="menu_info_report-folder">
       <a href=/cgi-bin/info.cgi?rm=info_report-folder_form>
       Report folder
+      </a>
+    </li>
+-->
+    <li id="menu_info_reports">
+      <a href=/cgi-bin/info.cgi?rm=info_new_reports_form>
+	Reports
       </a>
     </li>
 
