--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -27,13 +27,11 @@
 
     </td>
     <td style="width:30%">
-      <h2>Fix for prematurely closed requests</h2>
+      <h2>ILL Stats report</h2>
       <br/>
-      <p>A number of requests (notably early multiple-copy requests) had been mistakenly closed when another request in the same group was closed.</p>
+      <p>Click on the 'Info' tab, and then 'Reports' to see your ILL statistics.</p>
       <br/>
-      <p>Those requests which should have remained active have be "un-closed" and will now show up properly.</p>
-      <br/>
-      <p>If you've already completed the ILL, please take a moment to return/check-in/etc those requests in fILL.</p>
+      <p>The old reporting system is being redesigned. This is the first step; other reports will follow in time.</p>
     </td>
   </tr>
 </table>
