columns explanation, and an IE fix

--- a/templates/info/view_report.tmpl
+++ b/templates/info/view_report.tmpl
@@ -10,7 +10,7 @@ $.ajaxSetup ({
 
 $('document').ready(function(){
 
-    oTable = $('#datatable_contacts').dataTable({
+    oTable = $('#datatable_report').dataTable({
         "bJQueryUI": true,
         "sPaginationType": "full_numbers",
         "bInfo": true,
@@ -30,24 +30,24 @@ $('document').ready(function(){
 		]
 	},
         "aoColumns": [
-            { "mDataProp": "Year", "sWidth": "5%" },
-            { "mDataProp": "MonthNum", "sWidth": "5%" },
-            { "mDataProp": "Month", "sWidth": "5%" },
-            { "mDataProp": "Borrowing: books requested", "sWidth": "5%" },
-            { "mDataProp": "Borrowing: actual requests made", "sWidth": "5%" },
-            { "mDataProp": "Borrowing: unfilled responses", "sWidth": "5%" },
-            { "mDataProp": "Borrowing: lender shipped", "sWidth": "5%" },
-            { "mDataProp": "Borrowing: we cancelled", "sWidth": "5%" },
-            { "mDataProp": "Lending: requests to lend", "sWidth": "5%" },
-            { "mDataProp": "Lending: could not fill", "sWidth": "5%" },
-            { "mDataProp": "Lending: shipped", "sWidth": "5%" },
-            { "mDataProp": "Lending: forward to branch", "sWidth": "5%" },
-            { "mDataProp": "Lending: borrower cancelled", "sWidth": "5%" },
+            { "mDataProp": "Year", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "MonthNum", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Month", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Borrowing: books requested", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Borrowing: actual requests made", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Borrowing: unfilled responses", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Borrowing: lender shipped", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Borrowing: we cancelled", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Lending: requests to lend", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Lending: could not fill", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Lending: shipped", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Lending: forward to branch", "sWidth": "5%", "sDefaultContent": "-" },
+            { "mDataProp": "Lending: borrower cancelled", "sWidth": "5%", "sDefaultContent": "-" },
         ],
         "bAutoWidth": false
     });
 
-    $('#datatable_contacts tbody tr').live('mouseover mouseout', function (event) {
+    $('#datatable_report tbody tr').live('mouseover mouseout', function (event) {
         if (event.type == 'mouseover') {
             $(this).addClass("ui-state-hover");
         } else {
@@ -67,6 +67,22 @@ $('document').ready(function(){
     <ol>
       <li> </li>
     </ol>
+    <h3>Borrowing</h3>
+    <table style="border:1px solid black;border-collapse:collapse;">
+      <tr><td style="border:1px solid black;">Books requested</td><td style="border:1px solid black;"># titles you've requested.</td></tr>
+      <tr><td style="border:1px solid black;">Actual requests</td><td style="border:1px solid black;">including retrying unfilleds, etc</td></tr>
+      <tr><td style="border:1px solid black;">Unfilled responses</td><td style="border:1px solid black;"># times libraries could not fill (actual) requests</td></tr>
+      <tr><td style="border:1px solid black;">Lender shipped</td><td style="border:1px solid black;">books physically received from lenders.</td></tr>
+      <tr><td style="border:1px solid black;">We cancelled</td><td style="border:1px solid black;">Requests you cancelled.</td></tr>
+    </table>
+    <h3>Lending</h3>
+    <table style="border:1px solid black;border-collapse:collapse;">
+      <tr><td style="border:1px solid black;">Requests to lend</td><td style="border:1px solid black;"># requests other libraries have made to you</td></tr>
+      <tr><td style="border:1px solid black;">Could not fill</td><td style="border:1px solid black;"># times you responded 'unfilled'</td></tr>
+      <tr><td style="border:1px solid black;">Shipped</td><td style="border:1px solid black;">books you sent out.</td></tr>
+      <tr><td style="border:1px solid black;">Forward to branch</td><td style="border:1px solid black;"># requests you've forwarded to one of your branches</td></tr>
+      <tr><td style="border:1px solid black;">Borrower cancelled</td><td style="border:1px solid black;"># requests that the borrower cancelled before you could respond.</td></tr>
+    </table>
   </div>
 
   <div id="middlecontent">
@@ -75,7 +91,7 @@ $('document').ready(function(){
       <h3>ILL Stats</h3>
       <div>
 	<div class="dataTable_wrapper">
-	  <table id="datatable_contacts" width="100%">
+	  <table id="datatable_report" width="100%">
 	    <thead>
 	      <tr>
 		<th>Year</th><th>MonthNum</th><th>Month</th><th>Borrowing: books requested</th><th>Borrowing: actual requests made</th><th>Borrowing: unfilled responses</th><th>Borrowing: lender shipped</th><th>Borrowing: we cancelled</th><th>Lending: requests to lend</th><th>Lending: could not fill</th><th>Lending: shipped</th><th>Lending: forward to branch</th><th>Lending: borrower cancelled</th>
