Public (patron) interface to fILL

--- a/templates/submenu_borrow.tmpl
+++ b/templates/submenu_borrow.tmpl
@@ -9,6 +9,12 @@
       </a>
     </li>
 
+    <li id="menu_borrow_new_patron_requests">
+      <a href=/cgi-bin/lightning.cgi?rm=new_patron_requests>
+      New patron requests
+      </a>
+    </li>
+
     <li id="menu_borrow_unfilled">
       <a href=/cgi-bin/lightning.cgi?rm=unfilled>
       Unfilled
