--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -100,6 +100,12 @@
       </a>
     </li>
 
+    <li id="menu_patrons">
+      <a href=/cgi-bin/patrons.cgi?rm=patrons_form>
+      Patrons
+      </a>
+    </li>
+
     <li id="menu_info">
       <a href=/cgi-bin/info.cgi?rm=info_contacts_form>
       Info
