--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -77,7 +77,7 @@
     </li>
 
     <li id="menu_myaccount">
-      <a href=/cgi-bin/myaccount.cgi?rm=myaccount_settings_form>
+      <a href=/cgi-bin/public.cgi?rm=myaccount_form>
       My Account
       </a>
     </li>
