--- a/templates/patrons/patrons.tmpl
+++ b/templates/patrons/patrons.tmpl
@@ -43,7 +43,7 @@ $('document').ready(function(){
             { "mDataProp": "is_verified", "sWidth": "5%" },
             { "mDataProp": "last_login", "sWidth": "5%" },
             { "mDataProp": "ill_requests", "sWidth": "5%" },
-            { "mDataProp": null, "sWidth": "10%" }
+            { "mDataProp": "actions", "sWidth": "10%" }
         ],
         "bAutoWidth": false
     });
@@ -106,6 +106,7 @@ $('document').ready(function(){
     <p>Update a user's <strong>email address</strong> by clicking on it and changing the text.</p><br/>
     <p>Update a user's <strong>enabled</strong> status by clicking on it entering '0' or '1' ('0' means they are not enabled).</p><br/>
     <p>Update a user's <strong>verified</strong> status by clicking on it entering '0' or '1' ('0' means they are not verified).</p><br/>
+    <p>You won't see a user's current <strong>password</strong>, but you can change it by clicking on "Click to change password" for that user.</p><br/>
   </div>
 
   <div id="middlecontent">
@@ -121,7 +122,7 @@ $('document').ready(function(){
 	  <table id="datatable_patrons" width="100%">
 	    <thead>
 	      <tr>
-		<th>pid</th><th>Name</th><th>Card</th><th>Username</th><th>email_address</th><th>Enabled?</th><th>Verified?</th><th>Last login</th><th># requests</th><th>Actions</th>
+		<th>pid</th><th>Name</th><th>Card</th><th>Username</th><th>Email address</th><th>Enabled?</th><th>Verified?</th><th>Last login</th><th># requests</th><th>Change password</th>
 	      </tr>
 	    </thead>
 	    <tbody>
