clarify some language on the welcome screen

--- a/templates/public/welcome.tmpl
+++ b/templates/public/welcome.tmpl
@@ -25,8 +25,10 @@
       </p>
       <br/>
       <p>
-	fILL does not keep any record of your searches or requests.  Logging in is necessary for your library to know who is making
-	the request, but no information linking your account to any searches or requests is kept after that transaction.
+	fILL does not keep any record of your searches or requests after your books are returned.  
+	Logging in is necessary for your library to know who is making 	the request, but no information 
+	linking your account to any searches or requests is kept after the ILL transaction is completed.
+	Some non-identifying data may be retained for statistical purposes.
       </p>
       <br/>
       <br />
